# CopyPrjOfMine

./: .gitignore  CMakeLists.txt  CMakePresets.json  note.txt  object_hierarchy.txt  vcpkg.json
header/: Baddies.h  Block.h  Button.h  CareTaker.h  CollisionProbe.h  CollisionType.h  Data.h  Direction.h  Fireball.h  GameState.h  GameWindow.h  GameWorld.h  Item.h  Map.h  Mario.h  MarioType.h  Memento.h  MenuScreen.h  ResourceManager.h  Screen.h  SettingScreen.h  Sprite.h  SpriteState.h  Tile.h  TileType.h  TitleScreen.h  utils.h
resource/graphic/tiles/: BaseFile.tmx
resource/maps/: Map2.json  map1.json  map1demo.json  map3.json  test.json  tiles2.tsx
src/: Baddies.cpp  Block.cpp  Button.cpp  CareTaker.cpp  CollisionProbe.cpp  Fireball.cpp  GameWindow.cpp  GameWorld.cpp  Item.cpp  Map.cpp  Mario.cpp  Memento.cpp  MenuScreen.cpp  ResourceManager.cpp  Screen.cpp  SettingScreen.cpp  Sprite.cpp  Tile.cpp  TitleScreen.cpp  main.cpp  utils.cpp
